<?xml version="1.0"?>
<package>
  <name>pedestrian_space</name>
  <version>0.0.0</version>
  <description>The pedestrian_space package</description>
  <maintainer email="jhermosilla@todo.todo">jhermosilla</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
